add download as pdf, add scaling for narrow devices

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/three": "^0.155.0",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "randomcolor": "^0.6.2",
     "sass": "^1.64.2",
     "three": "^0.155.0"
