--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,15 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:vue/vue3-essential"
+        "plugin:vue/vue3-recommended"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "parser": "@typescript-eslint/parser"
     },
-    "plugins": [
-        "@typescript-eslint",
-        "vue"
-    ],
+    "plugins": [],
     "rules": {
+        "vue/multi-word-component-names": 0
     }
 }
