--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.47.0",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.0.0",
+    "nuxt-icon": "^0.5.0",
     "nuxt-seo-kit": "^1.3.9",
     "prettier": "3.0.1",
     "typescript": "^5.1.6"
