--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "canvg": "^4.0.1",
     "draggable-resizable-vue3": "^1.0.94-beta",
     "html2canvas": "^1.4.1",
+    "js-beautify": "^1.15.1",
     "jspdf": "^2.5.1",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
@@ -34,6 +35,7 @@
     "three": "^0.155.0",
     "uuid": "^9.0.0",
     "vite": "2.6.4",
+    "vue-3-slider-component": "^0.1.4",
     "vue3-colorpicker": "^2.2.3"
   }
 }
